main section image

--- a/index.html
+++ b/index.html
@@ -12,16 +12,19 @@
 				<a href="#">
 					<img src="./assets/icon.webp" alt="site icon" />
 				</a>
-				<nav>
-					<ul>
-						<li><a href="#"> Home</a></li>
-						<li><a href="#"> About </a></li>
-						<li><a href="#"> Contact </a></li>
-					</ul>
-				</nav>
+
+				<ul>
+					<li><a href="#"> Home</a></li>
+					<li><a href="#"> About </a></li>
+					<li><a href="#"> Contact </a></li>
+				</ul>
 			</nav>
 		</header>
-		<main></main>
+		<main>
+            <section class="main_section">
+                <h1>Mon site</h1>
+            </section>
+        </main>
 		<footer></footer>
 	</body>
 </html>
