--- a/index.html
+++ b/index.html
@@ -21,10 +21,25 @@
 			</nav>
 		</header>
 		<main>
-            <section class="main_section">
-                <h1>Mon site</h1>
-            </section>
-        </main>
+			<section class="main_section">
+				<h1>Mon site</h1>
+				<p>
+					Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam
+					facilis autem officiis repellendus! Dolores nisi ipsam odit adipisci
+					non. Neque, eum voluptas?
+				</p>
+				<button>Call To Action !</button>
+			</section>
+			<section class="second_section">
+				<h2>Second title</h2>
+				<p>
+					Lorem ipsum dolor sit, amet consectetur adipisicing elit. Itaque
+					exercitationem perspiciatis asperiores eius molestias corporis ratione
+					eveniet! Earum, similique praesentium? Recusandae id molestiae
+					corporis dolorum, rerum deserunt accusantium unde dicta.
+				</p>
+			</section>
+		</main>
 		<footer></footer>
 	</body>
 </html>
