--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 
 				<ul>
 					<li><a href="#"> Home</a></li>
-					<li><a href="#"> About </a></li>
-					<li><a href="#"> Contact </a></li>
+					<li><a href="./about.html"> About </a></li>
+					<li><a href="./contact.html"> Contact </a></li>
 				</ul>
 			</nav>
 		</header>
