--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>mon cool site</title>
 		<link rel="stylesheet" href="style.css" />
+		<link rel="shortcut icon" href="./assets/favicon.ico" type="image/x-icon" />
+		<meta name="description" content="mon site test blah blah" />
+		<meta name="author" content="martin" />
 	</head>
 	<body>
 		<header class="header">
