--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 				</a>
 
 				<ul>
-					<li><a href="#"> Home</a></li>
+					<li><a href="/index.html"> Home</a></li>
 					<li><a href="./about.html"> About </a></li>
 					<li><a href="./contact.html"> Contact </a></li>
 				</ul>
@@ -31,7 +31,7 @@
 					facilis autem officiis repellendus! Dolores nisi ipsam odit adipisci
 					non. Neque, eum voluptas?
 				</p>
-				<button>Call To Action !</button>
+				<button id="btn">Call To Action !</button>
 			</section>
 			<section class="second_section">
 				<h2>Second title</h2>
@@ -44,5 +44,6 @@
 			</section>
 		</main>
 		<footer></footer>
+		<script src="./script.js"></script>
 	</body>
 </html>
