--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 				<button id="btn">Call To Action !</button>
 			</section>
 			<section class="second_section">
-				<h2>Second title</h2>
+				<h2 id="st">Second title</h2>
 				<p>
 					Lorem ipsum dolor sit, amet consectetur adipisicing elit. Itaque
 					exercitationem perspiciatis asperiores eius molestias corporis ratione
